--- a/style.css
+++ b/style.css
@@ -131,8 +131,8 @@ ul {
 
 li {
   list-style: none;
-  padding-left: 12px;
-  margin: 8px;
+  padding-left: 16px;
+  margin-bottom: 8px;
   position: relative;
 }
 
